# signal_generator

./: .gitignore  CMakeLists.txt  package.json
include/hyro/: DigitalConverterComponent.h  SignalGenerator.h  SignalGeneratorComponent.h  Thresholding.h
include/hyro/msgs/: Signal.h  Signal.proto.h
msgs/hyro/msgs/: Signal.proto
src/components/: DigitalConverterComponent.cpp  SignalGeneratorComponent.cpp
src/examples/: signal_generator.cpp
src/internal/: SignalGenerator.cpp  SignalGenerator.h  Thresholding.cpp  Thresholding.h
tests/: test_signal_generator.cpp
